package com.example.learningmaterials.设计模式.h_建造者模式;

/**
 * Created by yzc on 2020-03-21.
 * 产品基类
 */
public class Food {

    protected StringBuilder raw = new StringBuilder();
}
